tests/syntax_error/None_as_value.jou
def foo() -> None:
    x = None  # Error: None is not a value in Jou, use e.g. -1 for numbers or NULL for pointers
